feat(core): add locale module detection via bytecode scanning